# aoc

./: Cargo.toml  README.md  new.sh
day-01/: Cargo.toml
day-01/src/: part1.rs  part2.rs
day-02/: Cargo.toml
day-02/src/: part1.rs  part2.rs
day-03/: Cargo.toml  input1.txt
day-03/src/: part1.rs  part2.rs
day-04/: Cargo.toml
day-04/src/: part1.rs  part2.rs
day-05/: Cargo.toml
day-05/src/: part1.rs  part2.rs
day-06/: Cargo.toml
day-06/src/: part2.rs
day-07/: Cargo.toml
day-07/src/: part1.rs  part2.rs
day-08/: Cargo.toml
day-08/src/: part1.rs  part2.rs
day-09/: Cargo.toml
day-09/src/: part1.rs  part2.rs
day-10/: Cargo.toml
day-10/src/: part1.rs  part2.rs
day-11/: Cargo.toml
day-11/src/: part1.rs  part2.rs
day-12/: Cargo.toml
day-12/src/: part1.rs
