[package]
name = "day-05"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom_error.workspace = true
miette.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
regex.workspace = true
range-collections.workspace = true
